# mail-app-

./: .gitignore
.github/workflows/: build.yml
mail_desktop/: .gitignore  JENKINS_SETUP.md  Jenkinsfile.simple  README.md  deploy-from-release.sh  deploy.sh  package.json  pnpm-lock.yaml  test-build-mirror.sh
mail_desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
mail_desktop/src-tauri/capabilities/: default.json
mail_desktop/src-tauri/icons/: icon.icns
mail_desktop/src-tauri/src/: commands.rs  lib.rs  oauth_callback_server.rs
mail_desktop/src-tauri/src/mail/: discovery.rs  imap.rs  mod.rs  pop3.rs  provider_constants.rs  types.rs
mail_frontend/: Jenkinsfile.simple  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vitest.config.js
mail_frontend/public/: robots.txt  sitemap.xml
mail_frontend/public/privacy-policy/: index.html
mail_frontend/public/terms-of-service/: index.html
mail_frontend/src/: App.vue  env.d.ts  main.ts  style.css
mail_frontend/src/api/: adminUsers.js  announcement.js  auth.js  authCode.js  automation.js  batchLogin.js  domain.js  email.js  feedback.js  mailbox.js  mailboxShare.js  milkCoin.js  monitoring.js  notification.js  payment.js  paymentAccount.js  plugin.js  proxy.js  smtpAccounts.js  trigger.js  unified.js  user.js  workflow.js  workflowMarket.js
mail_frontend/src/composables/: useAutoRefresh.ts  useBatchSelection.ts  useDesktopOAuthKeepAlive.ts  (+1 more)
scripts/: update_desktop_release.js
(+144 files in other folders)
